# inspire

./: .gitignore  Cargo.toml  roman_notes.md  rust-toolchain.toml
.github/workflows/: inspiring-crate.yml  python-oracle.yml
bench-results/2026-05-10-ipir-ypir/: REPORT.md
inspiring/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  SPEC.md  roman_notes.md  rust-toolchain.toml
inspiring/.cargo/: config.toml
inspiring/benches/: pack.rs
inspiring/docs/: inspiring_packing_crate_59430b54.plan.md  spiral-rs-mapping.md
inspiring/examples/: roundtrip.rs
inspiring/fuzz/: Cargo.toml
inspiring/fuzz/fuzz_targets/: pack_no_panic.rs
inspiring/src/: automorph.rs  collapse.rs  error.rs  intermediate.rs  key_switching.rs  lib.rs  lwe.rs  pack.rs  params.rs  preprocess.rs
inspiring/tests/: aggregate_correctness.rs  collapse_correctness.rs  noise_theorem2.rs  pack_roundtrip.rs  python_oracle_match.rs  skeleton_smoke.rs  transform_correctness.rs
inspiring/tools/python-oracle/: README.md  pyproject.toml
inspiring/tools/python-oracle/inspiring_oracle/: __init__.py  automorph.py  collapse.py  gadget.py  intermediate.py  params.py  ring.py  rlwe.py
inspiring/tools/python-oracle/tests/: test_aggregate.py  test_automorph.py  test_collapse_half.py  test_gadget.py  test_key_switching.py  test_lemma1.py  test_lwe.py  test_params.py  test_ring.py  test_transform.py
ipir-sp/src/: client.rs
nullifier-pir/: Cargo.toml  NULLIFIER_FIXTURE.md  README.md
nullifier-pir/src/: backend.rs  encoding.rs  http.rs  lib.rs  main.rs  snapshot.rs
plans/: inspiring_packing_crate_59430b54.plan.md  ypir-sp_on_inspiring_37b742cd.plan.md
ypir-sp/: Cargo.toml
ypir-sp/bench/: REPORT.md
ypir-sp/benches/: end_to_end.rs
ypir-sp/src/: lib.rs  server.rs
ypir-sp/tests/: offline_online_flow.rs
