[package]
name = "nullifier-pir"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
description = "HTTP PIR server for 32-byte nullifier snapshots."

[features]
default = ["local-ipir"]
local-ipir = []
ypir-artifact = ["dep:ypir", "dep:ypir-spiral"]
debug-query-index = []

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.11.0"
anyhow = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
inspiring = { path = "../inspiring" }
ipir-sp = { path = "../ipir-sp" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
ypir = { git = "https://github.com/valargroup/ypir.git", rev = "4f7ef3d", default-features = false, features = ["server"], optional = true }
ypir-spiral = { package = "spiral-rs", git = "https://github.com/menonsamir/spiral-rs.git", rev = "f2c23c7", optional = true }

[dev-dependencies]
tempfile = "3.10"
