[project]
name = "inspiring-oracle"
version = "0.1.0"
description = "Reference oracle for InspiRING.Pack (Algorithm 1) at small parameters. See ../../SPEC.md."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inspiring_oracle"]

[tool.ruff]
target-version = "py311"
src = ["inspiring_oracle", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
